Fixed Overflow and Visiblity of footer

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 
 body {
   margin: 0px;
+  overflow: hidden;
 }
 
 :root {
@@ -18,6 +19,8 @@ body {
 
   --banner-height: min(450px, 30vh);
   --border-radius: 0.8em;
+
+  --footer-height: 2vh;
 }
 
 /* --- Banner CSS --- */
@@ -157,7 +160,8 @@ body {
 .divider {
   background-color: hsl(0, 0%, 93%);
 
-  height: 80%;
+  max-height: 80%;
+  height: 100px;
   width: 1.5px;
 }
 
@@ -194,7 +198,7 @@ body {
   z-index: 0;
 
   width: 100%;
-  height: calc(100vh - var(--banner-height));
+  height: calc(100vh - (var(--banner-height) + var(--footer-height)));
 
   background-color: var(--vr-light-gray);
 }
@@ -202,10 +206,15 @@ body {
 
 /* --- Footer CSS --- */
 .attribution {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  height: var(--footer-height);
 }
 
 /* --- MEDIA QUERIES CSS --- */
+/* --- LAPTOP --- */
 @media (max-width: 1024px) {
   .banner--cards {
     width: 85%;
@@ -237,7 +246,6 @@ body {
   }
 
 }
-
 
 /* --- MOBILE --- */
 @media (max-width: 375px) {
